[package]
name = "rsbullet"
version = "0.3.0"
edition = "2024"
authors = [
    "Nathan Kent <nkent2@cs.rochester.edu>",
    "Marco Boneberger <m.boneberger@tu-bs.de>",
    "Yixing <yanjizhou312@163.com>",
]
homepage = "https://github.com/Robot-Exp-Platform/rsbullet"
readme = "../README.md"
license = "MIT"
description = "Compiles bullet3 and exposes rust bindings to the C API"
categories = ["science::robotics", "simulation"]
keywords = ["pybullet", "bullet", "bullet3", "physics", "robotics"]
exclude = [
    "bullet3/data/*",
    "!bullet3/data/sphere8.mtl",
    "bullet3/examples/pybullet",
    "bullet3/examples/ThirdPartyLibs/openvr",
    "bullet3/docs",
    "bullet3/test",
]

[dependencies]
rsbullet-core = { version = "0.3.0", path = "../rsbullet-core" }
rsbullet_sys = { version = "0.3.0" }
nalgebra = { version = "0.34.1" }
robot_behavior = { path = "../../robot_behavior" }
anyhow = "1.0.100"

[features]
default = []
dart = ["rsbullet-core/dart"]
physx = ["rsbullet-core/physx"]
mujoco = ["rsbullet-core/mujoco"]
grpc = ["rsbullet-core/grpc"]
enet = ["rsbullet-core/enet"]
clsocket = ["rsbullet-core/clsocket"]
